1.6.0 (SVN/unreleased)
======================

  * Change the fix for #7522 made in 1.4.3. For inline resources we pass
    Unicode down into the page templates. The TAL machinery expects to get
    Unicode and not encoded strings.
    [hannosch]

  * Added BBB imports to make sure the InitializeClass can be imported in
    Zope versions before 2.12.
    [hannosch]

  * Avoid dependency on the zope.app.zapi package.
    [hannosch]

  * Declare package dependencies, fixed deprecation warnings for use of
    Globals and changed error raising to be forward compatible.
    [hannosch]

1.5.0 (SVN/unreleased)
======================

  * Resources beginning with "http://" or "https://" are now valid and may be
    included as resources. Registries will automatically disable merging,
    caching, compression, and inline rendering of external resources. This
    closes http://dev.plone.org/plone/ticket/8312
    [dunlapm, fschulze]

  * Added option to have a conditional comment attached to a given resource.
    Currently the UI only supports this behavior with the CSS Registry, but the
    underpinnings for the other two registries is in place. This closes
    http://dev.plone.org/plone/ticket/5521
    [dunlapm, fschulze]

  * Do not try to export the `cooked_expression` into the GenericSetup
    profiles. It is only an internal optimization and the value is reflected
    in the `expression` value.
    [hannosch]

  * Store the cooked expressions as a real persistent expression object,
    instead of compiling the expression on every view.
    [hannosch]

  * Added 'context' as an alias for 'object' in action expressions.
    [davisagli, hannosch]

1.4.3
=====

  * Fixed error where non-traversable resources could be registered. This closes
    http://dev.plone.org/plone/ticket/8153
    [dunlapm]

  * Ensure that resources can be removed in xml.
    [maurits]

  * Purge old zope2 Interface interfaces for Zope 2.12 compatibility.
    [elro]
